@@ -37,7 +37,6 @@
     margin:5px 0 0 0;
     padding:5px 10px;
     font-size: 11px;
-    min-height: 50px;
 }
 
 .qq-upload-file {}
@@ -63,6 +62,7 @@
 
 .qq-upload-list li .qq-upload-size {
     clear: both;
+    min-height: 17px;
 }
 
 .qq-upload-list li .sizeContainer {
@@ -72,7 +72,7 @@
     border-right: 1px solid #C5C5C5;
     border-bottom: 1px solid #C5C5C5;
     margin-top: 6px;
-    width: 80%;
+    width: 75%;
     height: 3px;
     float: left;
 }
