@@ -5,6 +5,7 @@
   <property name="use_flashupload" type="boolean">False</property>
   <property name="auto_upload" type="boolean">False</property>
   <property name="fill_titles" type="boolean">True</property>
+  <property name="fill_descriptions" type="boolean">False</property>
   <property name="size_limit" type="int">0</property>
   <property name="sim_upload_limit" type="int">2</property>
  </object> 
